--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "http": "^0.0.1-security",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
