--- a/package.json
+++ b/package.json
@@ -1,20 +1,129 @@
 {
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "fs": "^0.0.1-security",
-    "http": "^0.0.1-security",
-    "jade": "^1.11.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1"
-  },
   "name": "node_js",
   "version": "1.0.0",
+  "description": "",
   "main": "220706.js",
+  "dependencies": {
+    "accepts": "^1.3.8",
+    "acorn": "^2.7.0",
+    "acorn-globals": "^1.0.9",
+    "amdefine": "^1.0.1",
+    "ansi-styles": "^4.3.0",
+    "append-field": "^1.0.0",
+    "array-flatten": "^1.1.1",
+    "async": "^3.2.4",
+    "balanced-match": "^1.0.2",
+    "bignumber.js": "^9.0.0",
+    "body-parser": "^1.20.0",
+    "brace-expansion": "^1.1.11",
+    "buffer-from": "^1.1.2",
+    "busboy": "^1.6.0",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.2",
+    "chalk": "^4.1.2",
+    "character-parser": "^1.2.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "commander": "^2.6.0",
+    "concat-map": "^0.0.1",
+    "concat-stream": "^1.6.2",
+    "constantinople": "^3.0.2",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.4",
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
+    "cookie-signature": "^1.0.6",
+    "core-util-is": "^1.0.3",
+    "cors": "^2.8.5",
+    "css": "^1.0.8",
+    "css-parse": "^1.0.4",
+    "css-stringify": "^1.0.5",
+    "debug": "^2.6.9",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "ee-first": "^1.1.1",
+    "ejs": "^3.1.8",
+    "encodeurl": "^1.0.2",
+    "errorhandler": "^1.5.1",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "express": "^4.18.1",
+    "express-body-parser-error-handler": "^1.0.4",
+    "express-error-handler": "^1.1.0",
+    "express-session": "^1.17.3",
+    "filelist": "^1.0.4",
+    "finalhandler": "^1.2.0",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "fs": "^0.0.1-security",
+    "function-bind": "^1.1.1",
+    "get-intrinsic": "^1.1.2",
+    "has": "^1.0.3",
+    "has-flag": "^4.0.0",
+    "has-symbols": "^1.0.3",
+    "http": "^0.0.1-security",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "isarray": "^1.0.0",
+    "jade": "^1.9.2",
+    "jake": "^10.8.5",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.6",
+    "mkdirp": "^0.5.6",
+    "mongodb": "^4.8.1",
+    "ms": "^2.0.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "negotiator": "^0.6.3",
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.12.2",
+    "on-finished": "^2.4.1",
+    "on-headers": "^1.0.2",
+    "optimist": "^0.3.7",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.7",
+    "process-nextick-args": "^2.0.1",
+    "proxy-addr": "^2.0.7",
+    "qs": "^6.10.3",
+    "random-bytes": "^1.0.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "readable-stream": "^2.3.7",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "send": "^0.18.0",
+    "serve-static": "^1.15.0",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.4",
+    "source-map": "^0.1.43",
+    "sqlstring": "^2.3.1",
+    "statuses": "^2.0.1",
+    "streamsearch": "^1.1.0",
+    "string_decoder": "^1.1.1",
+    "supports-color": "^7.2.0",
+    "toidentifier": "^1.0.1",
+    "transformers": "^2.1.0",
+    "type-is": "^1.6.18",
+    "typedarray": "^0.0.6",
+    "uglify-js": "^2.2.5",
+    "uid-safe": "^2.1.5",
+    "unpipe": "^1.0.0",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "void-elements": "^2.0.1",
+    "with": "^4.0.3",
+    "wordwrap": "^0.0.2",
+    "xtend": "^4.0.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,6 +136,5 @@
   "bugs": {
     "url": "https://github.com/ziuni/NODE_JS/issues"
   },
-  "homepage": "https://github.com/ziuni/NODE_JS#readme",
-  "description": ""
+  "homepage": "https://github.com/ziuni/NODE_JS#readme"
 }
