--- a/mongoexam/package.json
+++ b/mongoexam/package.json
@@ -4,11 +4,15 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
+    "errorhandler": "^1.5.1",
     "express": "^4.18.1",
+    "express-error-handler": "^1.1.0",
+    "express-errorhandler": "^2.0.0",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "jade": "^1.11.0",
+    "mongodb": "^4.8.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   },
