--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.1",
     "express-error-handler": "^1.1.0",
     "express-session": "^1.17.3",
+    "moment": "^2.29.4",
     "mongodb": "^4.8.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
